--- a/src/main.css
+++ b/src/main.css
@@ -3,6 +3,15 @@ li {
   list-style-type: none;
 }
 
+h1 {
+  text-align: center;
+  margin-top: 60px;
+}
+
+h2 {
+  text-align: center;
+}
+
 /* nav bar */
 
 #navbar {
@@ -12,10 +21,12 @@ li {
   padding: 0;
   overflow: hidden;
   background-color: purple;
-}
-
-.nav-item {
-  float: left;
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .nav-item a {
@@ -30,6 +41,8 @@ li {
   background-color: #111111;
 }
 
+/* nav bar end */
+
 /* band list */
 
 .band-list-container {
@@ -38,16 +51,7 @@ li {
   margin-right: 30px;
 }
 
-
-
-h1 {
-  text-align: center;
-  margin-top: 60px;
-}
-
-h2 {
-  text-align: center;
-}
+/* band list end */
 
 /* login page form */
 
@@ -56,7 +60,6 @@ h2 {
   max-width: 400px;
   margin-left: auto;
   margin-right: auto;
-  
 }
 
 label {
@@ -80,7 +83,7 @@ button {
 
 /* social media footer */
 footer {
-  margin-top: 300px;
+  margin-top: 100px;
 }
 
 #social-media-list {
@@ -91,17 +94,39 @@ footer {
   margin-right: 37px;
 }
 
-.media-item {
-  /* display: flex;
+/* .media-item {
+  display: flex;
     flex-direction: row;
     justify-content: center;
-    flex: 1; */
-    /* margin-right: 37px; */
-}
+    flex: 1;
+    margin-right: 37px;
+} */
 
 .media-item a {
   display: block;
   text-align: center;
   padding: 10px;
   text-decoration: none;
+}
+
+/* social media footer end */
+
+/* band homepage announcement and img */
+
+#welcome {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+p {
+  max-width:470px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#boycott-img {
+  max-width: 470px;
+  margin-left: auto;
+  margin-right: auto;
 }
