--- a/src/main.css
+++ b/src/main.css
@@ -130,3 +130,33 @@ p {
   margin-left: auto;
   margin-right: auto;
 }
+
+/* upload button */
+#upload-button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* set list container */
+#set-list-container {
+  border: 3px solid black;
+  width: 400px;
+  height: 700px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.tune {
+  border: 1px solid gray;
+  width: 300px;
+  height: 50px;
+  text-align: center;
+  padding: 10px;
+  margin-top: 5px;
+}
+
+#duration-counter {
+  font-weight: bold;
+  font-size: 24px;
+}
